2005-06-10  Andrej Kacian <andrej@kacian.sk>
	* Initial import to svn